# SparkRenderer

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.txt  README.md  Spark.sln  prepare_debug_build  prepare_release_build
Spark/: ActorAI.cpp  ActorAI.h  AgentSpawner.cpp  AgentSpawner.h  AmbientOcclusion.cpp  AmbientOcclusion.hpp  Animation.cpp  Animation.hpp  AnimationCreator.cpp  AnimationCreator.hpp  AnimationData.cpp  AnimationData.hpp  AnimationPlayer.cpp  AnimationPlayer.hpp  Bloom.cpp  Bloom.hpp  BlurPass.cpp  BlurPass.h  Buffer.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  CameraManager.cpp  CameraManager.hpp  Clock.cpp  Clock.h  ClusterBasedDeferredRenderer.cpp  ClusterBasedDeferredRenderer.hpp  ClusterBasedForwardPlusRenderer.cpp  ClusterBasedForwardPlusRenderer.hpp  ClusterBasedLightCullingPass.cpp  ClusterBasedLightCullingPass.hpp  CommonUtils.cpp  CommonUtils.h  Component.cpp  Component.h  Cube.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  (+142 more)
Spark/CUDA/: Agent.cuh  BinaryHeap.cuh  DeviceMemory.h  DeviceTimer.cuh  List.cuh  Map.cuh  MemoryAllocator.cuh  MemoryManager.cuh  Node.cuh  PathFindingManager.cpp  PathFindingManager.h  kernel.cu  kernel.cuh
Spark/EngineSystems/: CMakeLists.txt  ResourceManager.cpp  ResourceManager.h  SceneManager.cpp  SceneManager.h  SparkRenderer.cpp  SparkRenderer.h
Spark/GUI/: CMakeLists.txt  ImGuiFileBrowser.cpp  ImGuiFileBrowser.h  ImGuizmo.cpp  ImGuizmo.h  SparkGui.cpp  SparkGui.h  imgui_custom_widgets.cpp
Spark/GUI/ImGui/: CMakeLists.txt  imconfig.h  imgui_custom_widgets.cpp  imgui_custom_widgets.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h
Spark/HID/: CMakeLists.txt  HID.cpp  HID.h  Key.h  State.h
Spark/Lights/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.h  LightManager.cpp  LightManager.h  LightProbe.cpp  LightProbe.h  LightStatus.hpp  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
Spark/effects/: AmbientOcclusion.cpp  AmbientOcclusion.hpp  BloomPass.cpp  BloomPass.hpp  BlurPass.cpp  BlurPass.h  CMakeLists.txt  DepthOfFieldPass.cpp  DepthOfFieldPass.h  FxaaPass.cpp  FxaaPass.hpp  LightShaftsPass.cpp  LightShaftsPass.hpp  MotionBlurPass.cpp  MotionBlurPass.hpp  PostProcessingStack.cpp  PostProcessingStack.hpp  SkyboxPass.cpp  SkyboxPass.hpp  TexturePass.cpp  TexturePass.hpp  ToneMapper.cpp  ToneMapper.hpp
Spark/lights/: CMakeLists.txt  DirectionalLight.cpp  LightManager.cpp  LightManager.h  LightProbe.cpp  LightProbe.h  LightProbeManager.cpp  LightProbeManager.hpp  PointLight.cpp  PointLight.h  SpotLight.cpp
Spark/loaders/: AnimationLoader.cpp  AnimationLoader.hpp  CMakeLists.txt  GltfLoader.cpp  GltfLoader.hpp  ILoader.hpp  ModelLoader.cpp  ModelLoader.hpp  SceneLoader.cpp  SceneLoader.hpp  ShaderLoader.cpp  ShaderLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
Spark/profiling/: GpuTimer.hpp
Spark/renderers/: CMakeLists.txt  ClusterBasedDeferredRenderer.cpp  ClusterBasedDeferredRenderer.hpp  ClusterBasedForwardPlusRenderer.cpp  ClusterBasedForwardPlusRenderer.hpp  ClusterBasedLightCullingPass.cpp  ClusterBasedLightCullingPass.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  ForwardPlusRenderer.cpp  ForwardPlusRenderer.hpp  GBuffer.cpp  GBuffer.hpp  LightProbesRenderer.cpp  LightProbesRenderer.hpp  Renderer.cpp  Renderer.hpp  RendererFactory.cpp  RendererFactory.hpp  RendererType.hpp  RenderingRequest.h  TileBasedDeferredRenderer.cpp  TileBasedDeferredRenderer.hpp  TileBasedForwardPlusRenderer.cpp  TileBasedForwardPlusRenderer.hpp  TileBasedLightCullingPass.cpp  TileBasedLightCullingPass.hpp
Spark/scripts/: CMakeLists.txt  RendererBenchmark.cpp  RendererBenchmark.hpp
Spark/utils/: CMakeLists.txt  CommonUtils.cpp  CommonUtils.h  FileUtils.cpp  FileUtils.hpp  GlHandle.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  ShaderParser.cpp  ShaderParser.hpp
SparkExec/: CMakeLists.txt  SparkExec.vcxproj  SparkExec.vcxproj.filters  imgui.ini  main.cpp  settings.json
SparkTests/: BufferTest.cpp  CMakeLists.txt  ComponentTest.cpp  GameObjectTest.cpp  GlHandle.cpp  MockSpark.hpp  ObserverPatternTest.cpp  ReflectionTest.cpp  ResourceFactoryTest.cpp  ResourceIdentifierTest.cpp  ResourceLibraryTest.cpp  SerializationTest.cpp  SparkTests.vcxproj  Utility.hpp  pch.h  settings.json  test.cpp
dependencies/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/dirent/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glfw/: CMakeLists.txt
dependencies/gli/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/glslang/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
dependencies/jsoncpp/: CMakeLists.txt
dependencies/rttr/: CMakeLists.txt
dependencies/shaderc/: CMakeLists.txt
dependencies/spdlog/: CMakeLists.txt
dependencies/spirv-headers/: CMakeLists.txt
dependencies/spirv-tools/: CMakeLists.txt
dependencies/spirv_cross/: CMakeLists.txt
dependencies/stb/: CMakeLists.txt
dependencies/tinygltf/: CMakeLists.txt
res/: M0.DDS  M1.DDS  M2.DDS  M3.DDS  M4.DDS  M5.DDS
res/cubemaps/: blaubeuren_outskirts_2k.dds  carpentry_shop_02_2k.dds  evening_road_01_2k.dds  moonless_golf_2k.dds  whipple_creek_regional_park_04_2k.dds
res/scenes/: defaultScene.scene  demo.scene  demo2.scene  main.scene
res/shaders/: averageLuminanceCompute.glsl  blendDof.glsl  bloomDownScale.glsl  bloomDownScaleMip0ToMip1.glsl  bloomUpScale.glsl  bloomUpsampler.glsl  bokehDetection.glsl  brdf.glsl  brdfCompute.glsl  brightPass.glsl  buildCompactClusterList.glsl  circleOfConfusion.glsl  clusterBasedDeferredPbrLighting.glsl  clusterBasedForwardPlusPbrLighting.glsl  clusterBasedLightCulling.glsl  cubemap.glsl  default.frag  default.glsl  default.vert  defaultInstanced.glsl  determineActiveCluster.glsl  downScale.glsl  equirectangularToCubemap.glsl  forwardPlusPbrLighting.glsl  fxaa.glsl  gaussianBlur.glsl  irradiance.glsl  light.glsl  lightShafts.glsl  localLightProbesLighting.glsl  luminanceHistogramCompute.glsl  motionBlur.glsl  pbrGeometryBuffer.glsl  postprocessing.frag  postprocessing.glsl  prefilter.glsl  (+10 more)
shaders/: default.vert
(+105 files in other folders)
